[package]
publish = false
name = "anthol_store"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
shared.workspace = true
anyhow = { workspace = true, features = ["backtrace", "std"] }
canbench-rs = { workspace = true, optional = true }
candid.workspace = true
ic-cdk = "0.17.0"
ic-cdk-macros = "0.17.0"
ic-stable-structures = "0.6.7"
nestify.workspace = true
serde.workspace = true
